--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,11 +1,19 @@
-#Wed May 17 10:58:21 CEST 2017
+#Thu Jun 08 18:42:46 CEST 2017
 eclipse.preferences.version=1
+encoding//elements/addReviewerTemplate.html=UTF-8
 encoding//elements/adminTemplate.html=UTF-8
 encoding//elements/authorTemplate.html=UTF-8
+encoding//elements/editReviewTemplate.html=UTF-8
 encoding//elements/loginTemplate.html=UTF-8
 encoding//elements/newArticleTemplate.html=UTF-8
 encoding//elements/registrationTemplate.html=UTF-8
+encoding//elements/reviewerTemplate.html=UTF-8
+encoding//elements/setReviewerTemplate.html=UTF-8
+encoding/admin.php=UTF-8
 encoding/author.php=UTF-8
+encoding/installdb.php=UTF-8
 encoding/login.php=UTF-8
 encoding/newArticleForm.php=UTF-8
 encoding/registration.php=UTF-8
+encoding/reviewer.php=UTF-8
+encoding/sendMailToReviewer.php=UTF-8
